--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,9 @@
 
     <modules>
         <module>thread</module>
+        <module>book</module>
+        <module>jianzhi</module>
+        <module>base</module>
     </modules>
 
     <dependencies>
@@ -18,6 +21,11 @@
             <groupId>org.openjdk.jcstress</groupId>
             <artifactId>jcstress-core</artifactId>
             <version>${jcstress.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.3.7</version>
         </dependency>
     </dependencies>
 
