--- a/thread/pom.xml
+++ b/thread/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>jcstress-core</artifactId>
             <version>${jcstress.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
     <prerequisites>
