--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>book</module>
         <module>jianzhi</module>
         <module>base</module>
+        <module>leetcode</module>
     </modules>
 
     <dependencies>
